# collective-behaviour-abm

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
examples/: run_model_tk.py  run_monolithic.py
src/abmsim/: __version__.py  agents.py  boid-predator_v3.py  config.py  environment.py  model.py  ui_tk.py
src/abmsim/functions/: agent_rules.py  predator_rules.py
src/abmsim/rules/: boid_rules.py  predator_rules.py  shared_rules.py
temp/: boid_predator_v3.py  run_baselinemodel.py  run_model_tk.py
